--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,5 +13,10 @@
                 Registrarse
             </a>
         </li>
+        <li>
+            <a href="/dashboard">
+                Dashboard
+            </a>
+        </li>
     </ul>
 </header>
