Add payment method

--- a/src/components/ListProducts.astro
+++ b/src/components/ListProducts.astro
@@ -31,13 +31,13 @@ await fetchListProducts();
 
             <p class="text-end col-span-2">Precio: ${products.Precio}</p>
 
-            <button
-              type="button"
+            <a
+              href="payment"
               class="bg-cyan-400 ml-auto col-start-2 mt-4 py-2 rounded-lg hover:bg-black w-1/2 flex items-center justify-center gap-2 active:scale-95"
             >
               <Shop class="w-5 h-5" />
               Buy
-            </button> 
+            </a> 
           </div>
         </div>
       </div>
